# vibatest

./: Anchor.toml  CLAUDE.md  README.md  package-lock.json
.cargo/: config.toml
app/: index.html
programs/vibatest/: Cargo.toml
programs/vibatest/src/: lib.rs
scripts/: initialize.ts
tests/: vibatest.ts
